--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@ memory-bank*
 memory-bank*/*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-
+dump
+dump/*
 # Runtime data
 pids
 *.pid
