--- a/packages/server-sse/wrangler.jsonc
+++ b/packages/server-sse/wrangler.jsonc
@@ -24,6 +24,7 @@
       }
     ]
   },
+   "services": [{ "service": "hashicorp-vault-worker", "binding": "HCV_WORKER" }],
   /**
    * PLAUSIBLEAI bucket
    * is a property of GoPlausible used for public implementation and you need to make an R2 bucket on cloudflare and configure it here. Use the open data in knowledge folder of server package resources and you find all files to upload to your R2 bucket there. Use taxonomic naming for your uploads and maintain the file naming coming from server package.
