--- a/packages/server-sse/wrangler.jsonc
+++ b/packages/server-sse/wrangler.jsonc
@@ -7,6 +7,7 @@
   "name": "algorand-remote-mcp",
   "main": "src/index.ts",
   "workers_dev": true,
+  "preview_urls": false,
   "compatibility_date": "2025-03-10",
   "compatibility_flags": ["nodejs_compat"],
   "route": {
