--- a/packages/server-sse/package.json
+++ b/packages/server-sse/package.json
@@ -20,7 +20,7 @@
 		"zod": "^3.25.61",
 		"algosdk": "2.9.0",
 		"qrcode": "^1.5.4",
-		"msgpack-lite": "^0.1.26"
+		"algo-msgpack-with-bigint": "^2.1.1"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
