--- a/packages/server-sse/wrangler.jsonc
+++ b/packages/server-sse/wrangler.jsonc
@@ -45,11 +45,11 @@
     {
       "binding": "OAUTH_KV",
       "id": "7f55745ea16e43c6be6e52faafc643fa"
+    },
+    {
+      "binding": "VAULT_ENTITIES",
+      "id": "eb58182f525a4260a51927f03d6b42a8"
     }
-    // {
-    //   "binding": "OAUTH_KV_ACCOUNTS",
-    //   "id": "710ae87516544f17bcee0f2af8463163"
-    // }
   ],
   "observability": {
     "enabled": false
