--- a/packages/server-sse/package.json
+++ b/packages/server-sse/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "algorand-remote-mcp",
-	"version": "1.2.0",
+	"version": "1.3.0",
 	"private": true,
 	"scripts": {
-		"deploy": "wrangler deploy",
+		"deploy": "wrangler deploy --minify",
 		"dev": "wrangler dev",
 		"format": "biome format --write",
 		"lint:fix": "biome lint --fix",
