--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -73,6 +73,15 @@
     "ITEMS_PER_PAGE": "10",
     "HCV_WORKER_URL": "https://hashicorp-vault-worker.emg110.workers.dev"
   }
+  /* Secrets */
+  // "secrets": {
+  //   "ALGORAND_TOKEN": "your_algorand_token_here",
+  //   "VAULT_OIDC_ACCESSOR": "your_vault_oidc_accessor_here",
+  //   "HCV_TOKEN": "your_hashicorp_vault_token_here"
+  //   "GOOGLE_CLIENT_SECRET": "your_google_client_secret_here",
+  //   "GOOGLE_CLIENT_ID": "your_google_client_id_here"
+  //   "COOKIE_ENCRYPTION_KEY": "your_cookie_encryption_key_here"
+
   /**
    * Smart Placement
    * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
