--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 encoding*/*
+*lock.json
 # Diagnostic reports (https://nodejs.org/api/report.html)
 memo*
 memo*/*
@@ -177,3 +178,4 @@ dist
 .wrangler/
 src/.DS_Store
 .DS_Store
+package-lock.json
