--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -57,6 +57,10 @@
     {
       "binding": "OAUTH_KV_SESSIONS",
       "id": "90c090cd9ccb45fea03a8ac3afe43383"
+    },
+    {
+      "binding": "CODE_VERIFIER_KV",
+      "id": "69c21dd2c8d64c2f9ff8563c40d7ab6f"
     }
   ],
   "observability": {
@@ -93,6 +97,9 @@
   //   "LINKEDIN_CLIENT_SECRET": "your_linkedin_client_secret_here",
   //   "LINKEDIN_CLIENT_ID": "your_linkedin_client_id_here",
   //   "COOKIE_ENCRYPTION_KEY": "your_cookie_encryption_key_here"
+  // "TWITTER_CLIENT_SECRET": "your_twitter_client_secret_here",
+  //   "TWITTER_CLIENT_ID": "your_twitter_client_id_here"
+  //  },
 
   /**
    * Smart Placement
