Updates and fixes and ARC26 QRCode

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -57,6 +57,10 @@
     {
       "binding": "CODE_VERIFIER_KV",
       "id": "69c21dd2c8d64c2f9ff8563c40d7ab6f"
+    },
+    {
+      "binding": "ARC26_KV",
+      "id": "90b157592d5b40dfae2c501a8d4f8291"
     }
   ],
   "observability": {
