--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 	},
 	"dependencies": {
 		"@modelcontextprotocol/sdk": "^1.12.1",
+		"@cf-wasm/photon": "^0.1.31",
+		"@juit/qrcode": "^1.0.59",
 		"agents": "^0.0.95",
 		"hono": "^4.8.0",
 		"just-pick": "^4.2.0",
