Improve structure, Add compound Tools, Add tinyman 2 compund functions

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 		"algosdk": "2.9.0",
 		"qrcode": "^1.5.4",
 		"algo-msgpack-with-bigint": "^2.1.1",
-		"hi-base32": "^0.5.1"
+		"hi-base32": "^0.5.1",
+		"@tinymanorg/tinyman-js-sdk": "^5.1.2"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
